tests/positive/basic/trim_basic/input.ci
void main(string[] args) {
    print("[" + trim("  bonjour  ") + "]\n");
    print("[" + trimLeft("\t hello\n") + "]\n");
    print("[" + trimRight("\t hello\n") + "]\n");
}
