tests/negative/semantic/wrong_arg_count_epochtominute/input.ci
void main() {
    print(toString(epochToMinute()) + "\n");
}
